[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a_maze_ing"
version = "1.0.0"
description = "Maze generation logic for A-Maze-ing project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["a_maze_ing"]

[project.scripts]
a_maze_ing = "a_maze_ing:main"